fix(dropdown): fix menu item cannot break the text inside
When the menu item contains too long text, the text doesn't break
into the new line when there's no enought space to display in
single line and the text overflows the container.

This PR fixes the menu item text breaking problem and also changes
the container to flex box to render the image, text and the dropdown
icon as flex box items to align better.

--- a/src/definitions/modules/dropdown.less
+++ b/src/definitions/modules/dropdown.less
@@ -93,11 +93,11 @@
 }
 .ui.dropdown .menu > .item .dropdown.icon {
   width: auto;
-  float: @itemDropdownIconFloat;
+  order: @itemDropdownIconOrder;
   margin: @itemDropdownIconMargin;
 }
-.ui.dropdown .menu > .item .dropdown.icon + .text {
-  margin-right: @itemDropdownIconDistance;
+.ui.dropdown .menu > .item .text {
+  flex-grow: 1;
 }
 
 
@@ -106,8 +106,11 @@
 ---------------*/
 
 .ui.dropdown > .text {
-  display: inline-block;
+  display: inline-flex;
+  order: 0;
   transition: @textTransition;
+  vertical-align: middle;
+  word-break: break-all;
 }
 
 /*--------------
@@ -117,7 +120,7 @@
 .ui.dropdown .menu > .item {
   position: relative;
   cursor: pointer;
-  display: block;
+  display: flex;
   border: @itemBorder;
   height: @itemHeight;
   min-height: @itemMinHeight;
@@ -133,6 +136,7 @@
   font-weight: @itemFontWeight;
   box-shadow: @itemBoxShadow;
   -webkit-touch-callout: none;
+  word-break: break-all;
 }
 .ui.dropdown .menu > .item:first-child {
   border-top-width: 0;
@@ -140,7 +144,7 @@
 
 .ui.dropdown .menu > .item.vertical {
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
 }
 
 /*--------------
@@ -216,7 +220,7 @@
 
 .ui.dropdown > .text > .description,
 .ui.dropdown .menu > .item > .description {
-  float: @itemDescriptionFloat;
+  order: @itemDescriptionOrder;
   margin: @itemDescriptionMargin;
   color: @itemDescriptionColor;
 }
@@ -298,7 +302,6 @@
 .ui.dropdown .menu > .item > .image,
 .ui.dropdown .menu > .item > img  {
   margin-left: 0;
-  float: @itemElementFloat;
   margin-right: @itemElementDistance;
 }
 
@@ -310,8 +313,7 @@
 .ui.dropdown > .text > .image:not(.icon),
 .ui.dropdown .menu > .item > .image:not(.icon),
 .ui.dropdown .menu > .item > img {
-  display: inline-block;
-  vertical-align: top;
+  align-self: center;
   width: auto;
   margin-top: @menuImageVerticalMargin;
   margin-bottom: @menuImageVerticalMargin;
@@ -1202,20 +1204,9 @@ select.ui.dropdown {
 
 .ui.dropdown .item .left.dropdown.icon,
 .ui.dropdown .left.menu .item .dropdown.icon {
+  order: @leftMenuDropdownIconOrder;
   width: auto;
-  float: @leftMenuDropdownIconFloat;
   margin: @leftMenuDropdownIconMargin;
-}
-.ui.dropdown .item .left.dropdown.icon,
-.ui.dropdown .left.menu .item .dropdown.icon {
-  width: auto;
-  float: @leftMenuDropdownIconFloat;
-  margin: @leftMenuDropdownIconMargin;
-}
-.ui.dropdown .item .left.dropdown.icon + .text,
-.ui.dropdown .left.menu .item .dropdown.icon + .text {
-  margin-left: @itemDropdownIconDistance;
-  margin-right: 0;
 }
 
 & when (@variationDropdownUpward) {
